# cmd/account/docs/swagger.yaml
@@ -137,6 +137,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/errors.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
         "500":
           description: Internal Server Error
           schema:
